[package]
name = "telegram-beancount-bot"
version = "0.1.0"
authors = ["Wang Ruochen <wrc@ruo-chen.wang>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"
regex = "1.4"
rust_decimal = "1.10"
once_cell = "1.7"
log = "0.4"
env_logger = "0.8"

tbot = "0.6"
tokio = { version = "0.2", features = ["full"] }
